# solid

./: README
autotests/: CMakeLists.txt  soliddevicesmodeltest.cpp  solidpowertest.cpp
autotests/qml/: tst_declarativedevices.qml
cmake/modules/: PythonMacros.cmake
solid/: CMakeLists.txt
solid/solid/: CMakeLists.txt  device.cpp  device.h  deviceinterface.h  devicemanager.cpp  storagedrive.cpp  storagedrive.h  storagevolume.cpp  storagevolume.h
solid/solid/backends/fakehw/: fakedevice.cpp  fakemanager.cpp  fakemanager.h  fakeopticaldisc.cpp  fakeopticaldisc.h  fakepartitions.xml  fakestorage.cpp  fakestorage.h  fakevolume.cpp  fakevolume.h
solid/solid/backends/hal/: haldevice.cpp  haldeviceinterface.h  halmanager.h  halopticaldisc.cpp  halopticaldisc.h  halstorage.cpp  halvolume.cpp  halvolume.h
solid/solid/backends/udev/: udevmanager.h
solid/solid/backends/udisks/: udisksdevice.cpp  udisksdevice.h  udisksdeviceinterface.h  udisksfilesystem.cpp  udisksfilesystem.h  udisksmanager.cpp  udisksmanager.h  udisksstorageaccess.cpp  udisksstoragedrive.cpp  udisksstoragedrive.h  udisksstoragevolume.cpp  udisksstoragevolume.h
solid/solid/backends/upower/: upowerdeviceinterface.h
solid/solid/backends/wmi/: wmidevice.cpp  wmideviceinterface.h
solid/solid/ifaces/: devicemanager.h  freespace.cpp  freespace.h  storagedrive.h  storagevolume.h
solid/solid/partitioner/: CMakeLists.txt  actionexecuter.cpp  actionexecuter.h  actionstack.cpp  actionstack.h  externalcommand.cpp  externalcommand.h  filesystem.cpp  filesystem.h  filesystem_p.h  org.solid.partitioner.resize.actions  partitioner_enums.h  partitioningerror.cpp  partitioningerror.h  resizehelper.cpp  resizehelper.h  volumemanager.cpp  volumemanager.h  volumetree.cpp  volumetree.h  volumetreemap.cpp  volumetreemap.h  volumetreemap_p.h
solid/solid/partitioner/actions/: action.cpp  action.h  createpartitionaction.cpp  createpartitionaction.h  createpartitiontableaction.cpp  createpartitiontableaction.h  formatpartitionaction.cpp  formatpartitionaction.h  modifyfilesystemaction.cpp  modifyfilesystemaction.h  modifypartitionaction.cpp  modifypartitionaction.h  partitionaction.cpp  partitionaction.h  removepartitionaction.cpp  removepartitionaction.h  removepartitiontableaction.cpp  removepartitiontableaction.h  resizepartitionaction.cpp  resizepartitionaction.h
solid/solid/partitioner/devices/: devicemodified.cpp  devicemodified.h  disk.cpp  disk.h  freespace.cpp  freespace.h  partition.cpp  partition.h  storagedrivemodified.cpp  storagedrivemodified.h  storagevolumemodified.cpp  storagevolumemodified.h
solid/solid/partitioner/utils/: filesystem.cpp  filesystem.h  filesystem_p.h  filesystemutils.cpp  filesystemutils.h  partitioner_enums.h  partitioningerror.cpp  partitioningerror.h  partitiontableutils.cpp  partitiontableutils.h  utils.cpp  utils.h
solid/tests/: CMakeLists.txt  partitioningtest.cpp  partitioningtest.h
solid/tests/partitioningtests/: CMakeLists.txt  partitioncreationtest.cpp  partitioncreationtest.h  partitionformattingtest.cpp  partitionformattingtest.h  partitionremovaltest.cpp  partitionremovaltest.h  partitionresizingtest.cpp  partitionresizingtest.h  partitiontabletest.cpp  partitiontabletest.h  undoredotest.cpp  undoredotest.h  volumedetectiontest.cpp  volumedetectiontest.h
src/imports/: CMakeLists.txt  declarativedevices.cpp  declarativedevices.h  declarativedevices_p.h  solidextensionplugin.cpp
src/imports/withlist/: declarativedevices.cpp  declarativedevices.h  declarativedevices_p.h
src/solid/: CMakeLists.txt  battery.cpp  device.cpp  deviceinterface.cpp  deviceinterface.h  managerbase.cpp  udevdeviceinterface.h
src/solid/backends/fakehw/: fakebattery.h  fakedeviceinterface.cpp
src/solid/backends/fstab/: fstabnetworkshare.cpp  fstabnetworkshare.h  fstabstorageaccess.cpp  fstabstorageaccess.h
src/solid/backends/hal/: halbattery.h  halblock.h  halcamera.cpp  halcamera.h  halcdrom.cpp  halgenericinterface.h  halportablemediaplayer.cpp  halportablemediaplayer.h  halprocessor.cpp  halprocessor.h  halstorageaccess.h
src/solid/backends/udev/: udevblock.cpp  udevblock.h  udevcamera.h  udevdeviceinterface.h  udevgenericinterface.h  udevportablemediaplayer.h  udevprocessor.cpp  udevprocessor.h
src/solid/backends/udisks2/: udisksdeviceinterface.h
src/solid/backends/upower/: upowerbattery.h  upowerdeviceinterface.cpp  upowerdeviceinterface.h
src/solid/devices/: CMakeLists.txt  managerbase.cpp
src/solid/devices/backends/fakehw/: fakedeviceinterface.h
src/solid/devices/backends/fstab/: fstabnetworkshare.cpp  fstabnetworkshare.h  fstabstorageaccess.cpp  fstabstorageaccess.h
src/solid/devices/backends/hal/: halbattery.cpp  halbattery.h  halblock.cpp  halblock.h  halcamera.h  haldevice.cpp  halgenericinterface.cpp  halgenericinterface.h  halopticaldisc.cpp  halportablemediaplayer.h  halprocessor.h  halstorage.cpp  halstorageaccess.cpp  halstorageaccess.h  halvolume.cpp
src/solid/devices/backends/udev/: CMakeLists.txt  udevblock.h  udevcamera.cpp  udevcamera.h  udevdeviceinterface.h  udevgenericinterface.cpp  udevgenericinterface.h  udevportablemediaplayer.cpp  udevportablemediaplayer.h  udevprocessor.h
src/solid/devices/backends/udisks2/: udisksdeviceinterface.cpp
src/solid/devices/backends/upower/: upowerbattery.h
src/solid/devices/frontend/: device.cpp  deviceinterface.cpp
src/solid/devices/ifaces/: backenddeviceinterface.cpp  backenddeviceinterface.h  device.h
src/solid/ifaces/: battery.h  deviceinterface.h
src/solid/power/: conserveresourcesjob.cpp  conserveresourcesjob.h  powermanagement.cpp  powermanagement.h  solidjob.cpp  solidjob.h  solidjob_p.h
